Format index.html

--- a/index.html
+++ b/index.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>JavaScript Locale</title>
-</head>
-<body>
-
-<div>
-    <select id="locale">
+  </head>
+  <body>
+    <div>
+      <select id="locale">
         <option value="en-US" selected>en-US</option>
         <option value="pt-BR">pt-BR</option>
         <option value="de-DE">de-DE</option>
         <option value="ja-JP">ja-JP</option>
-    </select>
-    <p id="currency"></p>
-    <p id="date"></p>
-</div>
+      </select>
+      <p id="currency"></p>
+      <p id="date"></p>
+    </div>
 
-<script src="index.js"></script>
-</body>
+    <script src="index.js"></script>
+  </body>
 </html>
